--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <p><b>Hello</b>World!</p>
+    <p><i>Hello</i>World!</p>
+    <p><u>Hello</u>World!</p>
+    <p><small>Hello</small>World!</p>
+    <p><big>Hello</big>World!</p>
+    <p>H<sub>2</sub>0</H></p>
+    <p>X=Y<sup>2</sup>+Z<sup>2</sup>
 </body>
 </html>
