--- a/sudoko-activity.html
+++ b/sudoko-activity.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <img src="./img.jpeg" alt="Sudoku Logo" height="400" allign ="center">
+<body align ="center">
+    <img src="./img.jpeg" alt="Sudoku Logo" height="300">
 
-    <table allign="center" border="2" width="200" cellpadding="10">
+    <table border="2" width="200" cellpadding="10" align = "center">
        <tr>
         <td><b>6</b></td>
         <td>&nbsp;</td>
